# bellatrix

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  spectra_analysis.py  test.py
.github/workflows/: workflow_test.yml
bellatrix/: calibration.py  efficiency.py  peak_fitting.py  resolution.py
detector_analysis/: __init__.py  calibration.py  efficiency.py  peak_fitting.py  resolution.py
detector_analysis/analysis/: __init__.py  fitting.py  spectra_analysis.py
docs/: requirements.txt
docs/source/: analysis_detector.rst  analysis_fitting.rst  calibration.rst  conf.py  efficiency.rst  index.rst  intro-notebook.md  peak_fitting.rst  resolution.rst  spectra_analysis.rst  tpx_analysis.rst  utils_file_handling.rst
example-scripts/: calibration.py  config.ini  efficiency.py  peak_fitting.py  resolution.py
example-spectra/: Ba133.txt  Cs137.txt  Na22.txt
gamma_analysis/: __init__.py  analysis.py  file_handling.py  workflow.py
gamma_analysis/analysis/: fitting.py
gamma_analysis/spectra_analysis/: __init__.py
gamma_analysis/tpx_analysis/: __init__.py  tpx_analysis.py
gammaforge/: __init__.py  calibration.py  characterisation.py  config.ini  efficiency.py  peak_fitting.py
gammaforge/analysis/: fitting.py
gammaforge/utils/: __init__.py  file_handling.py  import_ini.py
test/: test_analysis.py  test_detector_analysis.py  test_detector_fitting.py
tpx_analysis/: tpx_analysis.py
